--- a/src/common/css/reset.scss
+++ b/src/common/css/reset.scss
@@ -2,7 +2,7 @@
   font-family: 'PingFang';
   src: url(/src/common/font/PingFang.ttf);
 }
-body, div, span, header, footer, nav, section, aside, article, ul, li, a, p, h1, h2, h3, h4,h5, h6, i, b, textarea, button, input, select, figure, figcaption {
+body, div, span, img, header, footer, nav, section, aside, article, ul, li, a, p, h1, h2, h3, h4,h5, h6, i, b, textarea, button, input, select, figure, figcaption {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -30,8 +30,8 @@ p,div {
 input[type="button"], input[type="submit"], input[type="search"], input[type="reset"] {
   -webkit-appearance: none;
 }
+img { border-style: none; }
 textarea { -webkit-appearance: none;}  
-img{  width:100%; height:100%;  }
 a,label,.pointer{  cursor: pointer  }
 select, input, textarea{  outline:none  }
 ul{  list-style: none;  }
